feat: 投稿に閲覧者から見た状態を追加
